--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,11 @@ dependencies:
   flutter_timer_countdown: ^1.0.7
   gap: ^3.0.1
   http: ^1.2.1
+  lakos: ^2.0.4
+  omni_datetime_picker: ^2.0.5
   provider: ^6.1.2
   shared_preferences: ^2.2.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
