--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_paypal_payment: ^1.0.6
   flutter_timer_countdown: ^1.0.7
   gap: ^3.0.1
   http: ^1.2.1
