--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  expandable_page_view: ^1.0.17
   flutter:
     sdk: flutter
   flutter_localizations:
