--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: supreme_octo_eureka
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.3+4
+version: 0.1.4+5
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -24,6 +24,8 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.1
+  web: ^1.1.1
+  webview_flutter: ^4.11.0
 
 dev_dependencies:
   flutter_test:
